discussion/kv_engine/128637/128637_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Make EPBucket::getFileStats use stats.def.h and StatCollector

Change-Id: I85e683edb403ac9a084df169396d76906791e501

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2020-05-20 15:44:30.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-05-20 17:17:24.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2309/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:62:6: error: unknown type name "ep_db_data_size" [clang-diagnostic-error]
STAT(ep_db_data_size, bytes)
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:62:23: error: unknown type name "bytes" [clang-diagnostic-error]
STAT(ep_db_data_size, bytes)
                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:63:1: error: expected function body after function declarator [clang-diagnostic-error]
STAT(ep_db_file_size, bytes)
^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2309/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:62:6:
error: unknown type name "ep_db_data_size" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2309/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24147/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24147/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3844/ : FAILURE

Compile error at [2020-05-20T17:03:53.596Z] ../kv_engine/include/statistics/all_stats.h:123:1:
error: missing braces around initializer for ?std::__array_traits<cb::stats::StatSpec, 33>::_Type {aka cb::stats::StatSpec [33]}? [-Werror=missing-braces]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3844/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3749/ : FAILURE

Compile error at [2020-05-20T16:52:42.800Z] ../kv_engine/include/statistics/all_stats.h:123:1:
error: missing braces around initializer for ?std::__array_traits<cb::stats::StatSpec, 33>::_Type {aka cb::stats::StatSpec [33]}? [-Werror=missing-braces]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3749/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3787/ : FAILURE

Compile error at [2020-05-20T17:07:51.973Z] ../kv_engine/include/statistics/all_stats.h:123:1:
error: missing braces around initializer for ?std::__array_traits<cb::stats::StatSpec, 33>::_Type {aka cb::stats::StatSpec [33]}? [-Werror=missing-braces]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3787/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11624/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2851/ : FAILURE

Failure of a CTest test [2020-05-20T15:58:06.800Z] 182/401 Test #282: kv-engine-check-header-define-once-guard .......................................................................... ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2851/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/825/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
